# rust-grafana-metrics-logs-traces

./: .gitignore  Cargo.toml  README.md
grafana-agent/: agent.yaml
src/: constants.rs  context.rs  extensions.rs  main.rs
